fixed whitespace in impact slider

--- a/themes/unya/sass/_page-impact.scss
+++ b/themes/unya/sass/_page-impact.scss
@@ -128,7 +128,9 @@
     padding:0 29px;
   }
 .image-carousel{
+  width:100%;
   height:700px;
+  background-color:#00277E !important;
   .slick-dots {
     right: 1px;
     @include desktop {
