--- a/themes/unya/style.css
+++ b/themes/unya/style.css
@@ -546,6 +546,10 @@ textarea {
       .ctct-form-field-email input[type=email] {
         width: 100%; } }
 
+::-webkit-input-placeholder {
+  padding-left: 10px;
+  color: black; }
+
 :-ms-input-placeholder {
   padding-left: 10px;
   color: black; }
@@ -625,6 +629,9 @@ input[type=submit] {
   text-decoration: none;
   color: #BABABA !important;
   padding-left: 5px; }
+
+.search-field::-webkit-input-placeholder {
+  color: #BABABA; }
 
 .search-field:-ms-input-placeholder {
   color: #BABABA; }
@@ -2617,7 +2624,9 @@ section.opportunities-pre-footer p {
   .statistics h2 {
     padding: 0 29px; }
   .statistics .image-carousel {
-    height: 700px; }
+    width: 100%;
+    height: 700px;
+    background-color: #00277E !important; }
     .statistics .image-carousel .slick-dots {
       right: 1px; }
       @media (min-width: 800px) {
